// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="custom CommentContent-root"
  container="div"
  dangerouslySetInnerHTML={
    Object {
      "__html": "Hello <b>Bob</b><span>, you <mark>bad</mark> guy</span>",
    }
  }
/>
`;

exports[`renders empty words correctly 1`] = `
<ForwardRef(forwardRef)
  className="custom CommentContent-root"
  container="div"
  dangerouslySetInnerHTML={
    Object {
      "__html": "Hello <b>Bob</b>, you bad guy",
    }
  }
/>
`;
